refactor: Intellij reformat code 실행